Use `CompletableFuture` instead of deprecated `ListenableFuture`.
Closes #2669